@@ -1,0 +1,16 @@
+Number of bytes available to read? 
+Trying a read: 
+Bytes avail: 39
+this is a test\nthis is another test :)\n
+Bytes avail (post read): 0
+--- Reading the two sentences ---
+Reading a single byte: t
+Bytes avail: 38
+his is a test
+Bytes avail: 0
+this is another test :)
+Bytes avail: 0
+--- Final Read Step ---
+Bytes avail: 39
+this is a test
+this is another test :)
