@@ -1,0 +1,175 @@
+....................................................................................................
+Writing a massive amount of crap
+Pre-Close: Avail for reading from str: 
+Post-Close: Avail for reading from str: 102400
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 493 bytes
+Read in 102400 bytes
